# rex

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  INSPIRATION.md  README.md  autorun-plan.md  claude-code-headless-and-sessions-reference.md  plan.md  skills-lock.json
.claude/: settings.json
.claude/agents/: rex-cleaner-comments.md  rex-cleaner-fitness-functions.md  rex-complete-uat-preparations.md  rex-planning-bdd-writer.md  rex-planning-c4-architect.md  rex-planning-ddd-writer.md  rex-planning-plan-refinement.md  rex-planning-research-api.md  rex-planning-schedule-reviewer.md  rex-planning-scheduler.md  rex-planning-sdd-writer.md  rex-planning-tests-contract-seams-writer.md  rex-planning-tests-integration-writer.md  rex-planning-tests-spike-writer.md  rex-rust-senior-auditor.md  rex-rust-software-engineer.md
.claude/hooks/: commit-and-push.sh
.claude/skills/find-skills/: SKILL.md
.claude/skills/mermaid-diagrams/: SKILL.md
.claude/skills/research-reducer/: SKILL.md
.claude/skills/rex-chat/: SKILL.md
.claude/skills/rex-clean-fitness-functions/: SKILL.md
.claude/skills/rex-clean-uat/: SKILL.md
.claude/skills/rex-code-commenting/: SKILL.md
.claude/skills/rex-code-ergonomics/: SKILL.md
.claude/skills/rex-code-error-writing/: SKILL.md
.cursor/: hooks.json
.cursor/hooks/: commit-and-push.sh
.firecrawl/: autorun-plan.md  claude-code-headless-and-sessions-reference.md  rex-operator-harness-design.md  scrape-cicd-headless-guide.json  scrape-headless-cicd.json  scrape-sessions-workflow.json  search-automation.json
delete/: map-claude-code-docs.json  scrape-32-tips.json  scrape-agent-teams.json  scrape-sessions-sdk.json  search-multi-session.json
delete/.firecrawl/: scrape-auto-resume.json  scrape-cli-reference.json  scrape-cli-usage.json  scrape-commands-guide.json  scrape-common-workflows.json  scrape-headless-official.json  scrape-remote-control.json  scrape-sdk-official.json  search-cli.json  search-headless.json  search-print-output.json  search-sdk-programmatic.json  search-sessions.json
rex/: pipeline.yaml  projects.json
rex/<insert-project-id>/: project-status.json
rex/active/: project.yaml
rex/docs/: README.md  checklist.md  history.md  init.md  milestones.md  monorepo.md  objectives.md  operator.md  planning-overview.md  projects.md  rex-autorun.md  tasks.md  telegram.md
rex/some-brief-name/: project-status.json
rex/some-brief-namesss/: project-status.json
rex/some-brief-namesxx/: project-status.json
some-brief-name/: Cargo.toml
some-brief-namesss/: Cargo.toml
some-brief-namesxx/: Cargo.toml
src/: bundle.rs  error.rs  errors.rs  lib.rs  main.rs  project.rs
src/autorun/: chat.rs  claude.rs  inbox.rs  mod.rs  runner.rs  state.rs  telegram.rs  types.rs
src/bundle/: manifest.rs  merge.rs  mod.rs
src/chat/: daemon.rs  discovery.rs  mod.rs  sessions.rs  telegram.rs
src/commands/: activate.rs  autorun.rs  checklist.rs  codebase.rs  commands.rs  create.rs  git.rs  history.rs  init.rs  milestone.rs  mod.rs  mono.rs  objective.rs  project.rs  schedule.rs  task.rs
src/models/: checklist.rs  history.rs  mod.rs  planning.rs  project.rs  project_status.rs
src/project/: mod.rs  store.rs
src/schedule/: addressing.rs  counters.rs  mod.rs  ops.rs  promotion.rs  types.rs  validation.rs
src/ui/: design_select.rs  mod.rs  tab_select.rs  text_input.rs
templates/: CLAUDE.md.tmpl
tests/: contract.rs  fitness.rs  integration.rs  test_auth_refresh.rs  test_chat_messages.rs  test_stats_button.rs  test_telegram_messages.rs
tests/contract/: bundle_extract.rs  manifest_roundtrip.rs  project_schedule.rs  project_store.rs
tests/fitness/: counter_sync.rs
tests/integration/: cli_activate.rs  cli_autopilot.rs  cli_codebase.rs  cli_create_rows.rs  cli_init.rs  cli_project.rs  cli_schedule.rs
(+85 files in other folders)
