[package]
name = "rex-cli"
version = "0.1.9"
edition = "2024"
authors = ["Shaun McDonogh"]
description = "Rust CLI for harness management"
license = "MIT"
repository = "https://github.com/coderaidershaun/rex"
readme = "README.md"
keywords = ["cli", "harness", "project-management", "agent", "workflow"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["rex/projects.json", "rex/<insert-project-id>/", "skills-lock.json", ".claude/settings.local.json"]

[[bin]]
name = "rex"
path = "src/bin/main.rs"

[lib]
name = "rex_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dialoguer = "0.11"
console = "0.15"
inquire = "0.9.4"
crossterm = "0.29"
include_dir = "0.7"
