[package]
name = "rex-cli"
version = "0.1.22"
edition = "2024"
authors = ["Shaun McDonogh"]
description = "Rust CLI for harness management"
license = "MIT"
repository = "https://github.com/coderaidershaun/rex"
readme = "README.md"
keywords = ["harness", "auto-harness", "project-management", "agent", "workflow"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["rex/projects.json", "rex/<insert-project-id>/", "skills-lock.json", ".claude/settings.local.json", "CLAUDE.md"]

[[bin]]
name = "rex"
path = "src/bin/main.rs"

[[bin]]
name = "rex-autorun"
path = "src/bin/autorun.rs"

[lib]
name = "rex_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dialoguer = "0.11"
console = "0.15"
inquire = "0.9.4"
crossterm = "0.29"
include_dir = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "signal", "fs"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
libc = "0.2"
thiserror = "2.0.18"
